--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "apollo-server-express": "^3.6.3",
+    "bcrypt": "^5.0.1",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1"
   }
