fixed server issue now running from the root directory

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "couch-tomatoes",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm run build",
