--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "couch-tomatoes",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
+  "proxy": "http://localhost:3001/",
+  "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +12,8 @@
     "bootstrap": "^5.1.3",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
